# portfolio-issues-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/agent/: graph.py  nodes.py  state.py
app/db/: models.py  repository.py  session.py
app/routers/: audits.py  health.py  slack_actions.py
app/services/: drift.py  github_client.py  slack_client.py
tests/: conftest.py  test_audit_cap.py  test_classify.py  test_dedup_and_transitions.py  test_drift_service.py  test_github_client.py  test_graph.py  test_slack_signature.py  test_trigger_audit.py
